@@ -1,3 +1,6 @@
+2010-01-10  Michiel Roos <michiel@netcreators.com>
+	* Fix #12918: Respect $TCA['tx_dam_cat']['ctrl']['default_sortby'] = 'mychoice'; everywhere (Thanks to Uschi Renziehausen) 
+
 2010-01-05  Michiel Roos <michiel@netcreators.com>
 
 	* #11700: use _GPmerged instead of GParrayMerged, part two (Thanks to Georg Ringer)
